dark mode background fix

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -32,7 +32,11 @@ body
   width: 100%
   box-sizing: border-box
   max-width: 100vw
-  background-color: rgba(#E3E3E3, 0.1)
+  background-color: var(--color-background)
+
+// @media screen and (prefers-color-scheme: dark)
+//   body
+//     background-color: var(--color-background)
 
 a
   text-decoration: none
